fixed some bugs csss

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/css/app.css": "/css/app.css?id=77e6c7e6a1a58c99dd2c"
+    "/css/app.css": "/css/app.css?id=77e6c7e6a1a58c99dd2c",
+    "/assets/css/app.css": "/assets/css/app.css?id=4b309ae291a3df8b7932"
 }
