added default slide seeder

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/css/app.css": "/css/app.css",
-    "/assets/css/app.css": "/assets/css/app.css"
+    "/css/app.css": "/css/app.css?id=fc28e284bc4ee3f0309d",
+    "/assets/css/app.css": "/assets/css/app.css?id=c08d736a90858cbd4371"
 }
